improved param parsing